--- a/01-HTML-Git-CSS/index.html
+++ b/01-HTML-Git-CSS/index.html
@@ -10,8 +10,8 @@
 <body>
     <!-- Header Section with Corporate Name and links to onpage service descriptions -->
     <div class="header">
-        <!-- Span is being used to change the color of seo, it was to black for color impaired viewers -->
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Span is being used to change the color of seo, changed to black for color impaired viewers -->
+        <h1>Hori<strong>seo</strong>n</h1>
         <div>
             <ul>
                 <li>
@@ -32,21 +32,21 @@
 
     <!-- Section describing the services offered by Horiseon -->
     <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <div class="service-description">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of a notebook with illustrations of various elements of web prescence working together to achieve optimization"/>
             <h1>Search Engine Optimization</h1>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div class="service-description">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image of a laptop containing a grapic of a company's reputation trending up"/>
             <h1>Online Reputation Management</h1>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div class="service-description">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image of six people around a table engaging in various social media" />
             <h1>Social Media Marketing</h1>
             <p>
@@ -56,21 +56,21 @@
     </div>
     <!-- Explanation of benefits for provided services -->
     <div class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h1>Lead Generation</h1>
             <img src="./assets/images/lead-generation.png" alt="Image of a gear processing thru a funnel into currency" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h1>Brand Awareness</h1>
             <img src="./assets/images/brand-awareness.png" alt="Image of a lightbulb wearing a suit with radiant waves" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h1>Cost Management</h1>
             <img src="./assets/images/cost-management.png" alt="Image of a gear and currency" />
             <p>
@@ -80,7 +80,7 @@
     </div>
     <!-- Footer with copyright declaration -->
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h1>Made with ❤️️ by Horiseon</h1>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
