--- a/01-HTML-Git-CSS/index.html
+++ b/01-HTML-Git-CSS/index.html
@@ -35,6 +35,7 @@
     <!-- Main content describing the services offered by Horiseon -->
     <main class="content">
         <section class="service-description">
+            <!-- Anchor element for on page link -->
             <a name="search-engine-optimization"></a>
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of a notebook with illustrations of various elements of web prescence working together to achieve optimization"/>
             <h1>Search Engine Optimization</h1>
@@ -43,6 +44,7 @@
             </p>
         </section>
         <section class="service-description">
+            <!-- Anchor element for on page link -->
             <a name="online-reputation-management"></a>
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image of a laptop containing a grapic of a company's reputation trending up"/>
             <h1>Online Reputation Management</h1>
@@ -51,6 +53,7 @@
             </p>
         </section>
         <section class="service-description">
+            <!-- Anchor element for on page link -->
             <a name="social-media-marketing"></a>
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image of six people around a table engaging in various social media" />
             <h1>Social Media Marketing</h1>
