HTML framework coded

--- a/02-Advanced-CSS-Portfolio/index.html
+++ b/02-Advanced-CSS-Portfolio/index.html
@@ -15,26 +15,72 @@
             <!-- On page links to each section -->
             <ul>
                 <li><a href="#"">About Me</a></li>
-                <li><a href="#"">Work</a></li>
+                <li><a href="#"">Projects</a></li>
                 <li><a href="#contactme">Contact</a></li>
-                <li><a href="#"">CV</a></li> 
+                <!-- link to linked in -->
+                <li><a href="#"">Linked In</a></li> 
             </ul>
         </nav>
     </header>
 
     <main>
+
+        <section class="aboutme">
+            <h2>About Me</h2>
+            <div>
+                <div>
+                    <img src="https://via.placeholder.com/150" alt="image of Ben Slinde">
+                </div>
+                <div>
+                    <p> This is a paragraph about me</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="projects">
+            <h2>Projects</h2>
+            <div class ="projects">
+                <div class="project1">
+                    <img src="https://via.placeholder.com/350x150" alt="image of project1">
+                    <p> There will need to be an image and a description here for project 1, it needs to be 2X the size of all the rest</p>
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/150" alt="image of project2">
+                    <p> There will need to be an image and a description here for project 2</p>
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/150" alt="image of project3">
+                    <p> There will need to be an image and a description here for project 3</p>
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/150" alt="image of project4">
+                    <p> There will need to be an image and a description here for project 4</p>
+                </div>
+                <div>
+                    <img src="https://via.placeholder.com/150" alt="image of project5">
+                    <p> There will need to be an image and a description here for project 5</p>
+                </div>
+        </section>
+
+
+
+
+
+
         <section class="contactme">
             <h2>Contact Me</h2>
-            <div> 
-                <p><a href="mailto:benslinde@gmail.com">Send email</a></p>
-                <p><a href="https://github.com/stevenslade/Homework-GT-FSF-PT-06-2021">Github</a></p> 
+            <div>
+                <ul>
+                    <li><a href="mailto:benslinde@gmail.com">Send email</a></li>
+                    <li><a href="https://github.com/stevenslade/Homework-GT-FSF-PT-06-2021">Github</a></li>
+                </ul>
             </div>
         </section>
 
     </main>
     
     <footer>
-        <p></p>
+        <p>Thank you for visiting my profile site</p>
     </footer>
 </body>
 </html>
