Formated about me section HTML and CSS

--- a/02-Advanced-CSS-Portfolio/index.html
+++ b/02-Advanced-CSS-Portfolio/index.html
@@ -14,18 +14,19 @@
         <nav>
             <!-- On page links to each section -->
             <ul>
-                <li><a href="#"">About Me</a></li>
-                <li><a href="#"">Projects</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contactme">Contact</a></li>
-                <!-- link to linked in -->
-                <li><a href="#"">Linked In</a></li> 
+                <!-- link to linkedin -->
+                <li><a href="https://www.linkedin.com/in/benjamin-slinde-4224b3211" target="blank">Linkedin</a></li> 
             </ul>
         </nav>
+        <div class="highlightbar"></div>
     </header>
 
     <main>
-
-        <section class="aboutme">
+<!-- about me section with picture and paragraph -->
+        <section id="aboutme">
             <h2>About Me</h2>
             <div>
                 <div>
@@ -37,7 +38,7 @@
             </div>
         </section>
 
-        <section class="projects">
+        <section id="projects">
             <h2>Projects</h2>
             <div class ="projects">
                 <div class="project1">
@@ -62,17 +63,14 @@
                 </div>
         </section>
 
-
-
-
-
-
-        <section class="contactme">
+        <section id="contactme">
             <h2>Contact Me</h2>
             <div>
                 <ul>
-                    <li><a href="mailto:benslinde@gmail.com">Send email</a></li>
-                    <li><a href="https://github.com/stevenslade/Homework-GT-FSF-PT-06-2021">Github</a></li>
+                    <!-- Link to send me an email -->
+                    <li><a href="mailto:benslinde@gmail.com">Send Email</a></li>
+                    <!-- link to my github repository -->
+                    <li><a href="https://github.com/stevenslade/Homework-GT-FSF-PT-06-2021" target="blank">Github</a></li>
                 </ul>
             </div>
         </section>
