Added about me formating to CSS

--- a/02-Advanced-CSS-Portfolio/index.html
+++ b/02-Advanced-CSS-Portfolio/index.html
@@ -28,12 +28,12 @@
 <!-- about me section with picture and paragraph -->
         <section id="aboutme">
             <h2>About Me</h2>
-            <div>
+            <div class="mydetails">
                 <div>
                     <img src="https://via.placeholder.com/150" alt="image of Ben Slinde">
                 </div>
                 <div>
-                    <p> This is a paragraph about me</p>
+                    <p>This is a lengthy and informative paragraph about me.  It contains alot of exciting information about my skill sets.</p>
                 </div>
             </div>
         </section>
