Completed formatting for Section of content Projects, in HTML and CSS

--- a/02-Advanced-CSS-Portfolio/index.html
+++ b/02-Advanced-CSS-Portfolio/index.html
@@ -30,36 +30,36 @@
             <h2>About Me</h2>
             <div class="mydetails">
                 <div>
-                    <img src="https://via.placeholder.com/150" alt="image of Ben Slinde">
+                    <img src="https://via.placeholder.com/150" alt="currently a placeholder, planned to be image of Ben Slinde">
                 </div>
                 <div>
-                    <p>This is a lengthy and informative paragraph about me.  It contains alot of exciting information about my skill sets.</p>
+                    <p>I am currently a student in a Georgia Tech Full Stack Software Engineering Program.  I look forward to completing the program in Decemeber of 2021 and finding opportunity as a software or applications developer.</p>
                 </div>
             </div>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
-            <div class ="projects">
+            <div class ="projectlist">
                 <div class="project1">
                     <img src="https://via.placeholder.com/350x150" alt="image of project1">
                     <p> There will need to be an image and a description here for project 1, it needs to be 2X the size of all the rest</p>
                 </div>
                 <div>
                     <img src="https://via.placeholder.com/150" alt="image of project2">
-                    <p> There will need to be an image and a description here for project 2</p>
+                    <p> CSS Snippets.  </p>
                 </div>
                 <div>
                     <img src="https://via.placeholder.com/150" alt="image of project3">
-                    <p> There will need to be an image and a description here for project 3</p>
+                    <p>Rock, Paper, Scissors in Javascript.  </p>
                 </div>
                 <div>
-                    <img src="https://via.placeholder.com/150" alt="image of project4">
-                    <p> There will need to be an image and a description here for project 4</p>
+                    <img src="https://via.placeholder.com/150" alt="currently a placeholder image">
+                    <p> Project 4 is underway and will be revealed soon!</p>
                 </div>
                 <div>
-                    <img src="https://via.placeholder.com/150" alt="image of project5">
-                    <p> There will need to be an image and a description here for project 5</p>
+                    <img src="https://via.placeholder.com/150" alt="currently a placeholder image">
+                    <p> Project 5 will be detailed when completed</p>
                 </div>
         </section>
 
