Added images to image directory, changed placeholder links in HTML to actual images

--- a/02-Advanced-CSS-Portfolio/index.html
+++ b/02-Advanced-CSS-Portfolio/index.html
@@ -42,16 +42,16 @@
             <h2>Projects</h2>
             <div class ="projectlist">
                 <div class="project1">
-                    <img src="https://via.placeholder.com/350x150" alt="image of project1">
-                    <p> There will need to be an image and a description here for project 1, it needs to be 2X the size of all the rest</p>
+                    <img width="350" height="150" src="./assets/images/codeRefactor2SS.png" alt="image of project1">
+                    <p> Refactoring of existing code to improve acessibility for users and for optomized search engine results.</p>
                 </div>
                 <div>
-                    <img src="https://via.placeholder.com/150" alt="image of project2">
-                    <p> CSS Snippets.  </p>
+                    <img width="150" height="150" src="./assets/images/cssSnippetSS.png" alt="image of project2">
+                    <p> <strong>CSS Snippets.</strong>Build a responsive website containing snippets of CSS code. </p>
                 </div>
                 <div>
-                    <img src="https://via.placeholder.com/150" alt="image of project3">
-                    <p>Rock, Paper, Scissors in Javascript.  </p>
+                    <img width="150" height="150" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/330px-Rock-paper-scissors.svg.png" alt="image of project3">
+                    <p><strong>Rock, Paper, Scissors in Javascript.</strong></p>
                 </div>
                 <div>
                     <img src="https://via.placeholder.com/150" alt="currently a placeholder image">
