Changed avatar, added snippets project

--- a/02-Advanced-CSS-Portfolio/index.html
+++ b/02-Advanced-CSS-Portfolio/index.html
@@ -30,10 +30,10 @@
             <h2>About Me</h2>
             <div class="mydetails">
                 <div>
-                    <img src="https://via.placeholder.com/150" alt="currently a placeholder, planned to be image of Ben Slinde">
+                    <img width="200" height="200" src="./assets/images/SORBASS.png" alt="currently an image of chicopee woods MTB trails, planned to be image of Ben Slinde">
                 </div>
                 <div>
-                    <p>I am currently a student in a Georgia Tech Full Stack Software Engineering Program.  I look forward to completing the program in Decemeber of 2021 and finding opportunity as a software or applications developer.</p>
+                    <p>I am currently a student in a Georgia Tech Full Stack Software Engineering Program.  I look forward to completing the program in Decemeber of 2021 and finding opportunity as a software or applications developer. I also love mountain biking and spend every moment I can riding the trails.</p>
                 </div>
             </div>
         </section>
@@ -42,16 +42,20 @@
             <h2>Projects</h2>
             <div class ="projectlist">
                 <div class="project1">
-                    <img width="350" height="150" src="./assets/images/codeRefactor2SS.png" alt="image of project1">
+                    <a href="https://stevenslade.github.io/Homework-GT-FSF-PT-06-2021/01-HTML-Git-CSS/" target="blank">
+                    <img width="350" height="150" src="./assets/images/codeRefactor2SS.png" alt="screenshot of Horiseon Landing Page">
+                    </a>
                     <p> Refactoring of existing code to improve acessibility for users and for optomized search engine results.</p>
                 </div>
                 <div>
-                    <img width="150" height="150" src="./assets/images/cssSnippetSS.png" alt="image of project2">
+                    <a href="./cssSnippets/index.html" target="blank">
+                    <img width="150" height="150" src="./assets/images/cssSnippetSS.png" alt="screen showing css snippets header and some lines of code">
+                    </a>
                     <p> <strong>CSS Snippets.</strong>Build a responsive website containing snippets of CSS code. </p>
                 </div>
                 <div>
                     <img width="150" height="150" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/330px-Rock-paper-scissors.svg.png" alt="image of project3">
-                    <p><strong>Rock, Paper, Scissors in Javascript.</strong></p>
+                    <p><strong>Rock, Paper, Scissors in Javascript.</strong> Check back anyday for this to be active!</p>
                 </div>
                 <div>
                     <img src="https://via.placeholder.com/150" alt="currently a placeholder image">
@@ -82,3 +86,4 @@
     </footer>
 </body>
 </html>
+
