Add screen shot and link for Password Generator Project to Portfolio

--- a/02-Advanced-CSS-Portfolio/index.html
+++ b/02-Advanced-CSS-Portfolio/index.html
@@ -58,8 +58,10 @@
                     <p><strong>Rock, Paper, Scissors in Javascript.</strong> Check back anyday for this to be active!</p>
                 </div>
                 <div>
-                    <img src="https://via.placeholder.com/150" alt="currently a placeholder image">
-                    <p> Project 4 is underway and will be revealed soon!</p>
+                    <a href="https://stevenslade.github.io/Homework-GT-FSF-PT-06-2021/03-JavaScript-Password-Generator/" target="blank">
+                    <img width="150" height="150" src="./assets/images/passwordGeneratorSS.png" alt="image of heading text Password Generator and an output box">
+                    </a>
+                    <p> <strong>Password Generator.</strong>  Use this tool to select your character sets in order to generate a randomized password!</p>
                 </div>
                 <div>
                     <img src="https://via.placeholder.com/150" alt="currently a placeholder image">
