Put place holders in HTML for cards, add styling to buttons

--- a/04-Web-APIs-Code-Quiz/index.html
+++ b/04-Web-APIs-Code-Quiz/index.html
@@ -8,15 +8,20 @@
   </head>
   <body>
     <header>
-      <div class= "high-score">View HighScores</div>
-      <div class="timer">Timer:</button>
+      <div id= "high-score">View HighScores</div>
+      <div id="timer">Timer:</button>
     </header>
 
     <main>
       <section>
-        <div class="card">
-          <div class="dynamic-content">dynamic content</div>
+        <div id="intro">
+            <h1>Coding Quiz Challenge</h1>
+            <p>Answer the following questions as quickly as possible to acheive a high score. Incorrect answers will penalize you ten seconds.</p>
         </div>
+        <button id="start">Start Placeholder</button>
+        <div id="question">Question Placeholder</div>
+        <button id="submit">Submit placeholder</button>
+        <div id="high-score">High Score Placeholder</div>
       </section>
 
     </main>
