JS pseudo code and variables including questions array

--- a/04-Web-APIs-Code-Quiz/index.html
+++ b/04-Web-APIs-Code-Quiz/index.html
@@ -15,13 +15,13 @@
     <main>
       <section>
         <div id="intro">
-            <h1>Coding Quiz Challenge</h1>
-            <p>Answer the following questions as quickly as possible to acheive a high score. Incorrect answers will penalize you ten seconds.</p>
+            <h1></h1>
+            <p id="instructions"></p>
         </div>
-        <button id="start">Start Placeholder</button>
+        <div><button id="start">Start Placeholder</button></div>
         <div id="question">Question Placeholder</div>
-        <button id="submit">Submit placeholder</button>
-        <div id="high-score">High Score Placeholder</div>
+        <div id="submit"</div>
+        <div><ul id="highscore">High Score Placeholder</ul></div>
       </section>
 
     </main>
