added start game and timer functions

--- a/04-Web-APIs-Code-Quiz/index.html
+++ b/04-Web-APIs-Code-Quiz/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <div id= "high-score">View HighScores</div>
-      <div id="timer">Timer:</button>
+      <div id="high-score">View HighScores</div>
+      <div id="timer-count">Timer:</button>
     </header>
 
     <main>
@@ -18,9 +18,9 @@
             <h1></h1>
             <p id="instructions"></p>
         </div>
-        <div><button id="start">Start Placeholder</button></div>
+        <div><button id="start-button">Start</button></div>
         <div id="question">Question Placeholder</div>
-        <div id="submit"</div>
+        <div><button id="submit-button"</button>Submit</div>
         <div><ul id="highscore">High Score Placeholder</ul></div>
       </section>
 
