--- a/04-Web-APIs-Code-Quiz/index.html
+++ b/04-Web-APIs-Code-Quiz/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Box Styling</title>
+    <title>Coding Quiz Challenge</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
@@ -15,13 +15,19 @@
     <main>
       <section>
         <div id="intro">
-            <h1></h1>
-            <p id="instructions"></p>
+            <h1>Coding Quiz Challenge</h1>
+            <p>Answer the following questions as quickly as possible to acheive a high score. Incorrect answers will penalize you ten seconds.</p>
+            <div><button id="start-button">Start</button></div>
         </div>
-        <div><button id="start-button">Start</button></div>
-        <div id="question">Question Placeholder</div>
-        <div><button id="submit-button"</button>Submit</div>
-        <div><ul id="highscore">High Score Placeholder</ul></div>
+
+        <div id="question-container">
+            <div id="question">Question Placeholder</div>
+            <div><button id="submit-button"</button>Submit</div>
+        </div>
+
+        <div id="score-container">
+          <div><ul id="highscore">High Score Placeholder</ul></div>
+        </div>
       </section>
 
     </main>
