added a list to question container and css formatting

--- a/04-Web-APIs-Code-Quiz/index.html
+++ b/04-Web-APIs-Code-Quiz/index.html
@@ -22,7 +22,12 @@
 
         <div id="question-container">
             <div id="question">Question Placeholder</div>
-            <div><button id="submit-button"</button>Submit</div>
+            <ul id="choicelist">
+              <li id="achoice">choice a</li>
+              <li id="bchoice">choice b</li>
+              <li id="cchoice">choice c</li>
+              <li id="dchoice">choice d</li>
+            </ul>
         </div>
 
         <div id="score-container">
