Restructured loop over questions, using an index instead of a loop

--- a/04-Web-APIs-Code-Quiz/index.html
+++ b/04-Web-APIs-Code-Quiz/index.html
@@ -29,7 +29,6 @@
               <li id="dchoice">choice d</li>
             </ul>
             <div id="correct-message">
-               <hr>
                <p>correct</p>
             </div>
         </div>
@@ -43,7 +42,8 @@
         </div>
 
         <div id="score-container" class="card">
-          <div><ul id="highscore">High Score Placeholder</ul></div>
+          <div><h2>High Score List</h2></div>
+          <div><ul id="high-score-list"></ul></div>
           <div><button id="clear-button">Clear Scores</button></div>
           <div><button id="return-button">Return</button></div>
         </div>
