added correct message to appear if question answered correctly

--- a/04-Web-APIs-Code-Quiz/index.html
+++ b/04-Web-APIs-Code-Quiz/index.html
@@ -29,7 +29,7 @@
               <li id="dchoice">choice d</li>
             </ul>
             <div id="correct-message">
-               <p>correct</p>
+               <p>Correct!</p>
             </div>
         </div>
 
