added current hour variable to js file

--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -32,7 +32,7 @@
       <!-- Timeblocks go here -->
       
       <div class="row">
-        <div class="col-2">
+        <div class="col-2 timeBlock">
           Time
         </div>
         <div class="col-8">
@@ -43,8 +43,8 @@
       </div>
       
       <div class="row">
-        <div class="col-2">
-          9AM
+        <div class="col-2 timeBlock">
+          9:00AM
         </div>
         <div class="col-8">
           <p id="9am"></p> 
