added some initial css formatting to the rows of hours

--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -31,52 +31,52 @@
     <div class="container">
       <!-- Timeblocks go here -->
       
-      <div class="row">
-        <div class="col-2 timeBlock">
-          Time
+      <div class="row timeBlockHeader">
+        <div class="col-2 ">
+          Hour
         </div>
-        <div class="col-8">
-          Task 
+        <div class="col-9">
+          Activities
         </div>
-        <div class="col-2">
+        <div class="col-1">
         </div>
       </div>
       
-      <div class="row">
-        <div class="col-2 timeBlock">
+      <div class="row time-block">
+        <div class="col-2 hour">
           9:00AM
         </div>
-        <div class="col-8">
+        <div class="col-9 activitytext">
           <p id="9am"></p> 
         </div>
-        <div class="col-2">
+        <div class="col-1 saveBtn" >
+          Save
+        </div>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-2 hour">
+          10:00AM
+        </div>
+        <div class="col-9 activitytext">
+          <p id="10am"></p> 
+        </div>
+        <div class="col-1 saveBtn">
           Save
         </div>
       </div>
 
       <div class="row">
         <div class="col-2">
-          10AM
+          11AM
         </div>
         <div class="col-8">
-          <p id="10am"></p> 
+          <p id="11am"></p> 
         </div>
         <div class="col-2">
           Save
         </div>
       </div>
-
-        <div class="row">
-          <div class="col-2">
-            11AM
-          </div>
-          <div class="col-8">
-            <p id="11am"></p> 
-          </div>
-          <div class="col-2">
-            Save
-          </div>
-        </div>
 
         <div class="row">
           <div class="col-2">
