added css formatting to all hour intervals

--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -66,90 +66,89 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-2">
-          11AM
+      <div class="row time-block">
+        <div class="col-2 hour">
+          11:00AM
         </div>
-        <div class="col-8">
+        <div class="col-9 activitytext">
           <p id="11am"></p> 
         </div>
-        <div class="col-2">
+        <div class="col-1 saveBtn">
           Save
         </div>
       </div>
 
-        <div class="row">
-          <div class="col-2">
-            12PM
-          </div>
-          <div class="col-8">
-            <p id="12pm"></p> 
-          </div>
-          <div class="col-2">
-            Save
-          </div>
+      <div class="row time-block">
+        <div class="col-2 hour">
+          12:00AM
         </div>
-        
-        <div class="row">
-          <div class="col-2">
-            1PM
-          </div>
-          <div class="col-8">
-            <p id="1pm"></p> 
-          </div>
-          <div class="col-2">
-            Save
-          </div>
+        <div class="col-9 activitytext">
+          <p id="12pm"></p> 
         </div>
+        <div class="col-1 saveBtn">
+          Save
+        </div>
+      </div>
 
-        <div class="row">
-          <div class="col-2">
-            2PM
-          </div>
-          <div class="col-8">
-            <p id="2pm"></p> 
-          </div>
-          <div class="col-2">
-            Save
-          </div>
+      <div class="row time-block">
+        <div class="col-2 hour">
+          1:00PM
         </div>
+        <div class="col-9 activitytext">
+          <p id="1pm"></p> 
+        </div>
+        <div class="col-1 saveBtn">
+          Save
+        </div>
+      </div>
 
-        <div class="row">
-          <div class="col-2">
-            3PM
-          </div>
-          <div class="col-8">
-            <p id="3pm"></p> 
-          </div>
-          <div class="col-2">
-            Save
-          </div>
+      <div class="row time-block">
+        <div class="col-2 hour">
+          2:00PM
         </div>
+        <div class="col-9 activitytext">
+          <p id="2pm"></p> 
+        </div>
+        <div class="col-1 saveBtn">
+          Save
+        </div>
+      </div>
 
-        <div class="row">
-          <div class="col-2">
-            4PM
-          </div>
-          <div class="col-8">
-            <p id="4pm"></p> 
-          </div>
-          <div class="col-2">
-            Save
-          </div>
+      <div class="row time-block">
+        <div class="col-2 hour">
+          3:00PM
         </div>
+        <div class="col-9 activitytext">
+          <p id="3pm"></p> 
+        </div>
+        <div class="col-1 saveBtn">
+          Save
+        </div>
+      </div>
 
-        <div class="row">
-          <div class="col-2">
-            5PM
-          </div>
-          <div class="col-8">
-            <p id="5pm"></p> 
-          </div>
-          <div class="col-2">
-            Save
-          </div>
+      <div class="row time-block">
+        <div class="col-2 hour">
+          4:00PM
         </div>
-      
+        <div class="col-9 activitytext">
+          <p id="4pm"></p> 
+        </div>
+        <div class="col-1 saveBtn">
+          Save
+        </div>
+      </div>
+
+      <div class="row time-block">
+        <div class="col-2 hour">
+          5:00PM
+        </div>
+        <div class="col-9 activitytext">
+          <p id="5pm"></p> 
+        </div>
+        <div class="col-1 saveBtn">
+          Save
+        </div>
+      </div> 
 
     </div>
 
