--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -38,20 +38,14 @@
         <div class="col-9">
           Activities
         </div>
-        <div class="col-1">
-        </div>
       </div>
       
       <div class="row time-block">
         <div class="col-2 hour">
           9:00AM
         </div>
-        <div class="col-9 activitytext">
-          <p id="9am"></p> 
-        </div>
-        <div class="col-1 saveBtn" >
-          Save
-        </div>
+          <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+          <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
       <div class="row time-block">
