--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-<!-- Added link to bootstrap icon library -->
+    <!-- Added link to bootstrap icon library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     
     <link rel="stylesheet" href="assets/css/style.css"/>
@@ -43,14 +43,14 @@
         </div>
       </div>
       
-      <div class="row time-block">
+      <div id="9am" class="row time-block">
         <div class="col-2 hour">
           9:00AM
         </div>
-          <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
-          <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
-          <!-- Got this icon to work, its actually a font <i class="fas fa-save"></i> -->
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
+        <!-- Got this icon to work, its actually a font <i class="fas fa-save"></i> -->
+      </div>
 
       <div class="row time-block">
         <div class="col-2 hour">
