changed the time display from a Month, day, year to a continually updating time display.  added a function call in the new time updated function so that the checkTimeBlockColor function will run every second.

--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -52,16 +52,12 @@
         <!-- Got this icon to work, its actually a font <i class="fas fa-save"></i> -->
       </div>
 
-      <div class="row time-block">
+      <div id="10am" class="row time-block">
         <div class="col-2 hour">
           10:00AM
         </div>
-        <div class="col-9 activitytext">
-          <p id="10am"></p> 
-        </div>
-        <div class="col-1 saveBtn">
-          Save
-        </div>
+        <textarea class="form-control col-9 activitytext" aria-label="With textarea"></textarea>
+        <button type="button" class="col-1 btn btn-primary saveBtn"><i class="bi bi-save2"></i></button>
       </div>
 
       <div class="row time-block">
