added instructions to timeBlock header, added strong tags to header text, renamed screenshot to match link in readme

--- a/05-Third-Party-APIs-Work-Day-Scheduler/index.html
+++ b/05-Third-Party-APIs-Work-Day-Scheduler/index.html
@@ -36,10 +36,10 @@
       
       <div class="row timeBlockHeader">
         <div class="col-2 ">
-          Hour
+          <strong>Hour</strong>
         </div>
         <div class="col-9">
-          Activities
+          <strong>Activities</strong> - click on a row to enter your text.  Click the save button to the right after entering your text.
         </div>
       </div>
       
