removed unused foramtting from CSS

--- a/06-Server-Side-APIs-Weather-Dashboard/index.html
+++ b/06-Server-Side-APIs-Weather-Dashboard/index.html
@@ -14,7 +14,7 @@
 
 <body class="flex-column min-100-vh">
   <header class="header">
-    <h1 class="app-title">Weather Dashboard</h1>
+    <h1 class="title">Weather Dashboard</h1>
     <h2 id="currentDay">Current Day</h2>
   </header>
 
@@ -23,7 +23,7 @@
 
     <div class="col-12 col-md-3">
       <div class="card">
-        <h3 class="card-header text-uppercase">Search for a City</h3>
+        <h3 class="card-header">SEARCH FOR A CITY</h3>
         <form id="user-form" class="card-body">
           <label class="form-label" for="cityname"></label>
           <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
@@ -32,7 +32,7 @@
       </div>
 
       <div class="card">
-        <h3 class="card-header text-uppercase">Searched Weather History</h3>
+        <h3 class="card-header">SEARCHED WEATHER HISTORY</h3>
         <div class="list-group">
           <ul id="history">
             <li>Atlanta</li>
