added a fetch request to the API, the call requests imperial units

--- a/06-Server-Side-APIs-Weather-Dashboard/index.html
+++ b/06-Server-Side-APIs-Weather-Dashboard/index.html
@@ -43,7 +43,7 @@
     <div class="col-12 col-md-9">
       <h2 class="subtitle">Showing Weather for: <span id="repo-search-term"></span></h2>
        <div class ="currentCity">
-         <p>ATLANTA</p> 
+         <p>No City Selected</p> 
          <p>(3/30/21)</p>
          <p>Temp:</p>
          <p>Wind:</p>
